--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -15,6 +15,16 @@ h1 {
   line-height: 1.5;
 }
 
+h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+p {
+  color: #8f8f8f;
+}
+
 .container-fluid {
   padding:3% 15%;
 }
@@ -52,4 +62,21 @@ h1 {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+}
+
+/* Features section*/
+#features {
+  padding: 7% 15%;
+}
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icons {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+.icons:hover {
+  color: #ff4c68;
 }
