implemented bootstrap carousel for testimonials section

--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -90,7 +90,6 @@ p {
 
 /* Testimonial section */
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: white;
@@ -100,6 +99,10 @@ p {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 
