--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -16,14 +16,14 @@ h1 {
 }
 
 h2 {
-  font-family: "Montserrat";
+  font-family: "Ubuntu";
   font-weight: bold;
   font-size: 3rem;
   line-height: 1.5;
 }
 
 h3 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -115,4 +115,16 @@ p {
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+
+/* Pricing section */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
 }
