adjusted iphone image using css z-index

--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -33,7 +33,7 @@ p {
 }
 
 .container-fluid {
-  padding:3% 15%;
+  padding:3% 15% 7%;
 }
 
 /* Navigation bar */
@@ -69,11 +69,16 @@ p {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
 }
 
 /* Features section*/
 #features {
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
+  z-index: 1;
 }
 .feature-box {
   text-align: center;
