used media queries to adjust image and text positioning when website is being rendered in a mobile device

--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -133,3 +133,17 @@ p {
 .pricing-column {
   padding: 3% 2%;
 }
+
+/* when our viewport is 1028px or smaller:
+- center text
+- change title img position back to static
+- rotate title img into upright position */
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
