--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -33,11 +33,10 @@ p {
 }
 
 .container-fluid {
-  padding:3% 15% 7%;
+  padding: 3% 15% 7%;
 }
 
 /* Navigation bar */
-
 .navbar {
   padding: 0 0 4.5rem;
 }
@@ -60,9 +59,7 @@ p {
 
 /* Download buttons */
 .download-button {
-
   margin: 5% 3% 5% 0;
-
 }
 
 /* Title image */
@@ -80,6 +77,7 @@ p {
   position: relative;
   z-index: 1;
 }
+
 .feature-box {
   text-align: center;
   padding: 5%;
@@ -89,6 +87,7 @@ p {
   color: #ef8172;
   margin-bottom: 1rem;
 }
+
 .icons:hover {
   color: #ff4c68;
 }
@@ -107,9 +106,8 @@ p {
 }
 
 .carousel-item {
-    padding: 7% 15%;
+  padding: 7% 15%;
 }
-
 
 /* Press Section */
 #press {
@@ -117,14 +115,13 @@ p {
   text-align: center;
   padding-bottom: 3%;
 }
+
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
 }
 
-
 /* Pricing section */
-
 #pricing {
   padding: 100px;
   text-align: center;
@@ -132,6 +129,30 @@ p {
 
 .pricing-column {
   padding: 3% 2%;
+}
+
+/* call to action (CTA) section */
+#cta {
+  background-color: #ff4c68;
+  color: white;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.cta-heading {
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3.5rem;
+}
+
+/* footer section */
+#footer {
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.social-icon {
+  margin: 20px 10px;
 }
 
 /* when our viewport is 1028px or smaller:
@@ -142,7 +163,8 @@ p {
   #title {
     text-align: center;
   }
-  .title-image {
+
+.title-image {
     position: static;
     transform: rotate(0);
   }
