--- a/TinDog/css/style.css
+++ b/TinDog/css/style.css
@@ -1,39 +1,44 @@
-
+/* HTML selectors */
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: white;
-}
-
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
-
-h2 {
-  font-family: "Ubuntu";
-  font-weight: bold;
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-h3 {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: bold;
-  font-size: 1.5rem;
 }
 
 p {
   color: #8f8f8f;
 }
 
+/* Headings */
+.big-heading {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
 .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section {
+  background-color: #ff4c68;
+  color: white;
+}
+
+.white-section {
+  background-color: white;
 }
 
 /* Navigation bar */
@@ -57,9 +62,10 @@ p {
   font-weight: 300;
 }
 
-/* Download buttons */
-.download-button {
-  margin: 5% 3% 5% 0;
+/* Title Section */
+#title .container-fluid {
+  padding: 3% 7% 15%;
+  text-align: left;
 }
 
 /* Title image */
@@ -70,16 +76,22 @@ p {
   right: 30%;
 }
 
+/* Download buttons */
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
 /* Features section*/
 #features {
-  padding: 7% 15%;
-  background-color: white;
   position: relative;
   z-index: 1;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
 
@@ -94,9 +106,7 @@ p {
 
 /* Testimonial section */
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
-  color: white;
 }
 
 .testimonial-image {
@@ -105,14 +115,14 @@ p {
   margin: 20px;
 }
 
-.carousel-item {
-  padding: 7% 15%;
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 /* Press Section */
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -124,33 +134,18 @@ p {
 /* Pricing section */
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
   padding: 3% 2%;
 }
 
-/* call to action (CTA) section */
-#cta {
-  background-color: #ff4c68;
-  color: white;
-  padding: 7% 15%;
-  text-align: center;
-}
-
-.cta-heading {
-  font-family: "Montserrat";
-  font-weight: bold;
-  font-size: 3.5rem;
-}
-
 /* footer section */
-#footer {
-  padding: 7% 15%;
-  text-align: center;
-}
-
 .social-icon {
   margin: 20px 10px;
 }
@@ -164,7 +159,7 @@ p {
     text-align: center;
   }
 
-.title-image {
+  .title-image {
     position: static;
     transform: rotate(0);
   }
